--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcsh 'Seafaring life -- Juvenile fiction'
 - !lcc 'PR'
 - !lcsh 'Pirates -- Juvenile fiction'
+- GITenberg
 title: 'A Middy of the King: A Romance of the Old British Navy'
 url: http://www.gutenberg.org/ebooks/24615
